[package]
name = "mongo_backuper"
version = "2.0.0"
edition = "2021"
description = "Create backups of MongoDB"
license = "MIT"
build = "build.rs"

[dependencies]
bson = "2.7.0"
mongodb = "2.7.1"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
time = { version = "0.3.30", features = ["local-offset"] }
serde = { version = "1.0.178", features = ["derive"] }
serde_json = "1.0.104"
futures-util = "0.3.29"

[target.'cfg(windows)'.dependencies]
windows-service = "0.6.0"


[build-dependencies]
winres = "0.1"
time = "0.3.30"

[profile.release]
lto = true
opt-level = "s"
debug = false
panic = "abort"
strip = "symbols"
codegen-units = 1